<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/edit_title"/>
    <EditText android:id="@+id/edit_title"
              android:layout_width="0px"
              android:layout_weight="1"
              android:layout_height="wrap_content"/>
  </LinearLayout>
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/edit_completed"/>
    <CheckBox android:id="@+id/edit_completed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
  </LinearLayout>
  <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_details"/>
  <EditText android:id="@+id/edit_details"
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:gravity="top"/>
  <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
      <Button android:id="@+id/save_task"
              android:layout_width="0px"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/save_task" />
      <Button android:id="@+id/delete_task"
              android:layout_width="0px"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/delete_task" />
  </LinearLayout>
</LinearLayout>
